--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       font-family: Arial, sans-serif; /* Or import a Google Font, e.g. 'Open Sans' */
       line-height: 1.6;
       color: #333;
-      background-color: #f8f8f8;
+      background-color: #008CBA;
     }
     a {
       text-decoration: none;
@@ -54,7 +54,7 @@
     .headline {
       font-size: 2rem;
       font-weight: bold;
-      color: #2c3e50;
+      color: #ff0000;
       margin-bottom: 10px;
     }
     .subheadline {
